# hyuga

./: .gitignore  .lvimrc  README.md  conftest.py  pyproject.toml  release.sh  setup.py
hyuga/: __main__.py  api.hy  cursor.hy  global.hy  importer.hy  inspect.hy  log.hy  lspspec.hy  server.hy  version.hy
hyuga-vscode-client/: .gitignore  .npmignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
hyuga-vscode-client/src/: extension.ts
hyuga/sym/: doc.hy  dummy.hy  eval.hy  filter.hy  helper.hy  loader.hy  module.hy  spec.hy  summary.hy  venv.hy
hyuga/sym/summary/: const.hy  core.hy  defclass.hy  defmacro.hy  defn.hy  import.hy  require.hy  setv.hy
hyuga/uri/: helper.hy
test_src/: doc.hy
test_src/namespace/: ns_module.hy
test_src/regular/: alpha_module.hy
test_src/regular/bravo/: bravo_module.hy
tests/: api.hy  define.hy  fixture.hy  lspspec.hy  misc.hy
tests/api/: api.hy
tests/asserts/: candidates.hy  details.hy  path.hy
tests/fixture/: sym.hy
tests/sample_src/: root.hy
tests/sym/: filter.hy  helper.hy  loader.hy  summary.hy
vscode-client/: extension.js  package-lock.json  package.json
