[tool.poetry]
name = "hyuga"
version = "0.2.1"
description = "Hyuga - Yet Another Hy Language Server"
authors = ["Yuuta Sakurai <sakurai.yuta@gmail.com>"]
license = "MIT"
readme = "README.md"
include = []

[tool.poetry.dependencies]
python = "^3.7.9,<3.11"
hy = "^0.24.0"
hyrule = "^0.2"
toolz = "^0.12.0"
pygls = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyuga = "hyuga.__main__:main"
